Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18067

QML ListView highlight animation behaves incorrectly

    XMLWordPrintable

Details

    • 7062c0e2d273ed32a7fd33d5320e811ef72e6682 (qt/tqtc-qtdeclarative/5.12.0)

    Description

      QML ListView highlight animation behaves incorrectly if the range defined by preferredHighlightBegin and preferredHighlightEnd is smaller than the highlight delegate.

      The attached example sets the preferred range with height of 2 pixels on the middle of the list. When the highlight is on the middle, click on adjacent items.

      I don't insist on positioning the highlight perfectly in the very middle in this case (it's implementation defined, let's say, since the range is too small... but that would be just great), but it should not flicker so ugly.

      Attachments

        For Gerrit Dashboard: QTBUG-18067
        # Subject Branch Project Status CR V

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            naevdal Sigrid Fjell Nævdal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes