View highlight flickers with highlightRangeMode: ApplyRange

The view position was alternating between the start and end
of the highlight range if the range < delegate size.  Now
favor the range start in this case, as per StrictlyEnforceRange.

Change-Id: Icb895f972ccb9598ecf7238259093584c43ae291
Fixes: QTBUG-18067
Reviewed-on: http://codereview.qt.nokia.com/2226
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Martin Jones <martin.jones@nokia.com>